--- a/index.html
+++ b/index.html
@@ -123,16 +123,9 @@
           </button> -->
         </div>
 
-        <p class="copyright">
-          &copy; Copyright by
-          <a
-            class="twitter-link"
-            target="_blank"
-            href="https://twitter.com/jonasschmedtman"
-            >Jonas Schmedtmann</a
-          >. Use for learning or your portfolio. Don't use to teach. Don't claim
-          as your own.
-        </p>
+        <div style="display: flex; justify-content: center">
+          <p>BE HAPPY 😊😊</p>
+        </div>
       </div>
 
       <div class="recipe">
